--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,25 @@
 .sign-out {
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-content: flex-end;
+  flex-wrap: wrap;
+  margin: 30px;
+  color: lightgreen;
+  
+  
+  
+
 }
 
 .link-container {
   display: flex;
   flex-direction: column;
 }
+
+div {
+  margin: 10px;
+  font-size: 1.2rem;
+}
+
