--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,10 +7,17 @@
   flex-wrap: wrap;
   margin: 30px;
   color: lightgreen;
+  width: 100px;
   
   
   
 
+}
+
+.sign-out-container {
+  display: flex;
+  align-content: flex-end;
+  flex-direction: row-reverse;
 }
 
 .link-container {
