Add font and styling

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,5 +1,4 @@
 .posts {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 }
