theme switch button

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,3 +6,11 @@
   display: flex;
   flex-direction: column;
 }
+
+.bg-fish {
+  background-color: chartreuse;
+}
+
+.bg-music {
+  background-color: plum 
+}
