--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -1,6 +1,4 @@
 .auth-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    margin: 24px;
+    display: grid;
 }
