--- a/src/Components/PostCard/PostCard.css
+++ b/src/Components/PostCard/PostCard.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    color: black;
     background: linear-gradient(225deg, #ffffff, #f9fafa, #f3f6f5, #edf1f0, #e7edeb, #e1e8e7, #dbe4e2, #d5dfdd);
 }
 
