--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -2,3 +2,9 @@
     margin: 24px;
     display: grid;
 }
+
+.auth-form.music {
+    border: 1px solid white;
+    padding: 40px;
+    background-color: black;
+}
