--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -35,6 +35,15 @@
   align-items: flex-end;
 }
 
+.music h1, .music p {
+  color: white;
+}
+
+.music button {
+  background-color: white;
+  color: black;
+}
+
 h1 {
   color: black;
   font-size: 7rem;
