--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -1,4 +1,4 @@
-.fish-auth-form {
+.auth-form.fish {
     margin: 24px;
     display: flex;
     flex-direction: column;
@@ -6,13 +6,26 @@
     
 }
 
+.auth-form {
+  margin: 24px;
+  display: grid;
+}
 
-.fish-auth-form button {
+.auth-form button {
     color: black;
     background-color: sandybrown;
     font-size: 1.35rem;
     margin-top: 10px;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+}
+
+.auth-form.fish button {
+  color: black;
+  background-color: sandybrown;
+  font-size: 1.35rem;
+  margin-top: 10px;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
 box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 
