--- a/src/Components/NewPost/NewPost.css
+++ b/src/Components/NewPost/NewPost.css
@@ -1,23 +1,35 @@
 .input-form {
     margin: 24px;
     display: grid;
+    
 }
 
-.music {
+/* .music {
     border: 1px solid black;
 }
 
 .music-text {
     color: aquamarine;
-}
+} */
 
 .input-form.music,  .input-form.fish{
     border: 1px solid white;
     padding: 40px;
     background-color: black;
+    
+    
 }
 
 .input-form.fish {
     background-color: white;
     border: 1px solid black;
+    
+}
+
+.create-post-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45vh;
+    
 }
